Add Internal and External JavaScript

--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h3>This is written in HTML</h3>
+
+    <h4 id="title"></h4>
+
+    <h5>5 + 5 = 2000</h5>
+    <h5>5 + 5 = <span id="answer"></span></h5>
     
+
+<!-- Internal Javascript -->
+<!-- <script>
+    document.write('This is written with Javascript!');
+    document.getElementById('title').innerText = "This Title Is Written From Javascript!";
+    document.getElementById('answer').innerText = 5 + 5;
+
+    console.log('Her name is Abigail!')
+    console.warn('Stop Eating in Class and Focus!')
+    console.error('May we not see error wey pass us Ooo!')
+</script> -->
+
+<!-- External Javascript -->
 <script src="assets/js/main.js"></script>
 </body>
 </html>
