Add Javascript Data Types and Variable

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <h4 id="title"></h4>
 
+    <div id="demo"></div>
+
     <h5>5 + 5 = 2000</h5>
     <h5>5 + 5 = <span id="answer"></span></h5>
     
