Start Conditions in JS

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 </script> -->
 
 <!-- External Javascript -->
-<script src="assets/js/main.js"></script>
+<!-- <script src="assets/js/main.js"></script> -->
+<script src="assets/js/condition.js"></script>
 </body>
 </html>
