--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
 
 <!-- External Javascript -->
 <!-- <script src="assets/js/main.js"></script> -->
-<script src="assets/js/condition.js"></script>
+<script src="assets/js/conditions.js"></script>
 </body>
 </html>
